fix: disable open_authoring to prevent popup blocking

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -15,7 +15,8 @@
         name: 'github',
         repo: 'diegobona/footballposition-soccer-site',
         branch: 'main',
-        api_root: 'https://api.github.com'
+        api_root: 'https://api.github.com',
+        open_authoring: false
       },
       site_url: 'https://footballposition-soccer.pages.dev/',
       publish_mode: 'simple',
